--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <link href = "../src/components/Home/fuente/style.css" rel = "stylesheet" type = "text/css" />
     <!-- <link href="../src/styles.css" rel="stylesheet" /> -->
  
     <title>DevieSoft</title>
